build-cache-node

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/
 spring.application.name=weather-service
 
 # Logging Configuration
-logging.level.com.sahibinden=DEBUG
+logging.level.com.build=DEBUG
 logging.level.org.springframework.web=INFO
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
