--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@
 spring.application.name=weather-service-test
 
 # Logging for tests
-logging.level.com.sahibinden=DEBUG
+logging.level.com.build=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.test=INFO
 
